<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warn1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/warntext" />

    <Button
        android:id="@+id/switchtoUMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchtoums" />

    <Button
        android:id="@+id/switchtoMTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchtomtpmode" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cdr1" />

        <Button
            android:id="@+id/btmountisocd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountiso" />

        <Button
            android:id="@+id/btumountisocd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umount" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curriso" />

        <TextView
            android:id="@+id/txtmiso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usbmode"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtusbmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>